--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,12 +1,15 @@
 spring:
-  h2:
-    console.enabled: true
-  application:
-    -name: animals
   datasource:
-    url: jdbc:h2:mem:mydb
-    username: sa
+    url: jdbc:mysql://localhost:3306/cepdb
+    username: root
     password: password
-    driverClassName: org.h2.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.MySQLDialect
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+
+  application:
+    name: animalsapi
